# git-sync-pr

./: README.md  main.py  pyproject.toml
.github/workflows/: sync-pr.yaml
